--- a/project.html
+++ b/project.html
@@ -37,28 +37,11 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
-								<li class="nav-item"><a class="nav-link" href="about-us.html">Education</a></li> 
-								<li class="nav-item"><a class="nav-link" href="services.html">projects</a></li>
-								<li class="nav-item"><a class="nav-link" href="portfolio.html">certification</a></li>
+								<li class="nav-item"><a class="nav-link" href="edu.html">Education</a></li> 
+								<li class="nav-item"><a class="nav-link" href="project.html">projects</a></li>
+								<li class="nav-item"><a class="nav-link" href="certificate.html">certification</a></li>
 								<li class="nav-item"><a class="nav-link" href="https://drive.google.com/file/d/1qvUnTaJhJpeN1I6wZu5SDRyJz2a8JhT3/view?usp=sharing">Resume</a></li>
 
-
-								<!-- <li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects</a>
-									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-										<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Project Details</a></li>
-										<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-									</ul> 
-								</li> 
-								<li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-									</ul>
-								</li> -->
-								<!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
 							</ul>
 						</div> 
 					</div>
@@ -90,7 +73,6 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>Showcasing My Project</h2>
-        			<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p> -->
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4">
@@ -147,21 +129,13 @@
 					<h2>My Recent Completed certification</h2>
 					<p>Click certificate name to redirect to certificate</p>
 				</div>
-        		<!-- <div class="projects_fillter">
-					<ul class="filter list">
-						<li class="active" data-filter="*"><a href="#">All Categories</a></li>
-						<li data-filter=".brand"><a href="#">Branding</a></li>
-						<li data-filter=".work"><a href="#">Creative Work </a></li>
-						<li data-filter=".web"><a href="#">Web Design</a></li>
-					</ul>
-				</div> -->
 				<div class="projects_inner row">
 					<div class="col-lg-4 col-sm-6 brand web">
 						<div class="projects_item">
 							<img class="img-fluid" src="img\certificate\az.png" alt="">
 							<div class="projects_text">
 								<a href="https://www.credly.com/badges/cbbb2228-2870-4049-ac2f-3f03e0f31d38/"><h4>Azure</h4></a>
-								<!-- <p>Client Project</p> -->
+								<!-- <p> Project</p> -->
 							</div>
 						</div>
 					</div>
@@ -170,7 +144,7 @@
 							<img class="img-fluid" src="img\certificate\aws.png" alt="">
 							<div class="projects_text">
 								<a href="https://www.credly.com/badges/277c5a16-138b-4f0a-8380-cf6c07dc6815/"><h4>aws</h4></a>
-								<!-- <p>Client Project</p> -->
+								<!-- <p>Project</p> -->
 							</div>
 						</div>
 					</div>
@@ -179,7 +153,7 @@
 							<img class="img-fluid" src="img\certificate\codechef.png" alt="">
 							<div class="projects_text">
 								<a href="https://www.codechef.com/certificates/public/cbb975c"><h4>python</h4></a>
-								<!-- <p>Client Project</p> -->
+								<!-- <p> Project</p> -->
 							</div>
 						</div>
 					</div>
