--- a/project.html
+++ b/project.html
@@ -215,7 +215,7 @@
         						<li><a href="https://www.linkedin.com/in/ansal-robinson-7b74ba222/">Linkedin</a></li>
         						<li><a href="https://github.com/ansalr">Github</a></li>
         						<li><a href="https://www.hackerrank.com/profile/ansalr_email">HackerRank</a></li>
-        						<li><a href="hhttps://www.cloudskillsboost.google/public_profiles/4ec42478-1300-490b-a2d9-669d5733d148">gcloudskillsboost</a></li>
+        						<li><a href="https://drive.google.com/file/d/1OmTHzGcIbkLxOnY3DXe5d7DQ9-OA_8fg/view?usp=sharing">gcloudskillsboost</a></li>
         						
         					</ul>
         				</aside>
