--- a/certificate.html
+++ b/certificate.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>projects</title>
+        <title>certification</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -40,7 +40,7 @@
 								<li class="nav-item"><a class="nav-link" href="edu.html">Education</a></li> 
 								<li class="nav-item"><a class="nav-link" href="project.html">projects</a></li>
 								<li class="nav-item"><a class="nav-link" href="certificate.html">certification</a></li>
-								<li class="nav-item"><a class="nav-link" href="https://drive.google.com/file/d/1OmTHzGcIbkLxOnY3DXe5d7DQ9-OA_8fg/view?usp=sharing">Resume</a></li>
+								<li class="nav-item"><a class="nav-link" href="https://drive.google.com/file/d/1PV1C-bXQL2PqoetbWmJfdoVA0rmEsojc/view?usp=sharing">Resume</a></li>
 							</ul>
 						</div> 
 					</div>
@@ -55,7 +55,7 @@
             	<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
 				<div class="container">
 					<div class="banner_content text-center">
-						<h2>projects</h2>
+						<h2>certification</h2>
 						<div class="page_link">
 							<a href="index.html">Home</a>
 							<a href="services.html">certificate</a>
