[update] Education data & Certification header

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
 										</div>
 									</div>
 									<div class="skill_item">
-										<h4>JavaScript <span class="counter">60</span>%</h4>
+										<h4>JavaScript <span class="counter">80</span>%</h4>
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 									<div class="skill_item">
-										<h4>C <span class="counter">60</span>%</h4>
+										<h4>TypeScript<span class="counter">80</span>%</h4>
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
