--- a/certificate.html
+++ b/certificate.html
@@ -71,7 +71,7 @@
         <section class="projects_area p_120">
         	<div class="container">
         		<div class="main_title">
-					<h2>My Recent Completed certification</h2>
+					<h2>My Recent certification</h2>
 					<p>Click certificate name to redirect to certificate</p>
 				</div>
 				<div class="projects_inner row">
