--- a/edu.html
+++ b/edu.html
@@ -128,13 +128,13 @@
 										</div>
 									</div>
 									<div class="skill_item">
-										<h4>JavaScript <span class="counter">60</span>%</h4>
+										<h4>JavaScript <span class="counter">80</span>%</h4>
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 									<div class="skill_item">
-										<h4>C <span class="counter">60</span>%</h4>
+										<h4>TypeScript <span class="counter">80</span>%</h4>
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
@@ -208,7 +208,7 @@
         <section class="projects_area p_120">
         	<div class="container">
         		<div class="main_title">
-					<h2>My Recent Completed certification</h2>
+					<h2>My Recent certification</h2>
 					<p>Click certificate name to redirect to certificate</p>
 				</div>
 				<div class="projects_inner row">
