[update] technical skill

--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
 								<ul>
 									<br>
 									<li><h3>Django</h3></li>
-									<li><h3>HTMl css</h3></li>
-									<li><h3>Langchain</h3></li>
-									<li><h3>Git</h3></li>
-									<li><h3>Data Structure</h3></li>
+									<li><h3>Flask</h3></li>
+									<li><h3>FastAPI</h3></li>
+									<li><h3>JavaScript</h3></li>
+									<li><h3>TypeScript</h3></li>
 									<li><h3>MY SQL</h3></li>
-									<li><h3>Strong communication</h3></li>
-									<li><h3>teamwork abilities</h3></li>
+									<li><h3>Git</h3></li>
+									<li><h3>HTMl, css</h3></li>
+									<li><h3>Langchain</h3></li>
 								</ul>
 																
 							</div>
