[update] footer Email redirect

--- a/edu.html
+++ b/edu.html
@@ -283,7 +283,7 @@
         					</div>
 							<p>Author: Ansal Robinson</p>
 							<p></p>
-							<p>Email : <a href="mailto:hege@example.com">ansalrobinsonb@gmail.com</a></p>
+							<p>Email : <a href="mailto:ansalrobinsonb@gmail.com">ansalrobinsonb@gmail.com</a></p>
         				</aside>
         			</div>
         			
