--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 											</div>
 										</div>
 										<h4 class="mb-3">Full Stack Software Developer</h4>
-										<p class="mb-0">Experiance in Django,Flask,Angular,Machine learning</p>
+										<p class="mb-0">Experiance in Django,Flask,Machine learning,Angular</p>
 									</div>
 								</div>
 								<div class="col-12">
