--- a/timeline.html
+++ b/timeline.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Education</title>
+        <title>TimeLine</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -87,8 +87,7 @@
 											</div>
 										</div>
 										<h4 class="mb-3">Full Stack Software Developer</h4>
-										<p class="mb-0">Experiance in Django,Flask,Angular,Machine learning</p>
-									</div>
+										<p class="mb-0">Experiance in Django,Flask,Machine learning,Angular</p>									</div>
 								</div>
 								<div class="col-12">
 									<div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
